# dry-python

./: .gitignore
dependency_management/: docs.txt  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
functools/: Partial_tool.py  Wrapper_tool.py
semantic_versioning/: Versioning.py  ideas.txt  main.py  patch_and_pre_release.py  test_versioning.py  validators.py
